cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
# Fix behavior of CMAKE_CXX_STANDARD when targeting macOS.
if (POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXXSTANDARD 11)
set(CMAKE_CXXSTANDARD_REQUIRED TRUE)
set(OpenCV_DIR  /usr/local/lib/cmake/opencv4/)
project( rectanglize )
find_package( OpenCV REQUIRED )
find_package( Armadillo REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${ARMADILLO_INCLUDE_DIR} )
find_package(GSL REQUIRED)
add_executable( rectanglize rectanglize.cpp )
target_link_libraries( rectanglize ${OpenCV_LIBS} ${ARMADILLO_LIBS} -lopenblas GSL::gsl GSL::gslcblas)
